--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-/.idea/
+# Yarn v3
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+yarn-debug.log*
+yarn-error.log*
+# since we don't use npm
+package-lock.json
+npm-debug.log*
+
+# node packages
 node_modules/
+
+# additional ignores
+/.idea/
